header&footer completed

--- a/assets/html/about-us.html
+++ b/assets/html/about-us.html
@@ -26,6 +26,48 @@
 
     <main></main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-top">
+        <div class="f-logo">
+          <p>LOGO</p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <p>@Lorem</p>
+        </div>
+        <div class="f-about-us">
+          <p>About us</p>
+          <p>Lorem Portfolio Careers Contact us</p>
+        </div>
+        <div class="f-contact-us">
+          <p>Contact us</p>
+          <div class="f-contact-us-par">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <p>+908 89097 890</p>
+          </div>
+        </div>
+        <div class="f-socials">
+          <div class="socials">
+            <img src="../icons/facebook.svg" alt="" />
+          </div>
+          <div class="socials">
+            <img src="../icons/instagram.svg" alt="" />
+          </div>
+          <div class="socials">
+            <img src="../icons/twitter.svg" alt="" />
+          </div>
+          <div class="socials">
+            <img src="../icons/linkedin.svg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        Copyright ® 2021 Lorem All rights Recerved
+      </div>
+    </footer>
   </body>
 </html>
