--- a/index.html
+++ b/index.html
@@ -26,7 +26,42 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="info">
+        <div class="info-left">
+          <div class="info-text">
+            <h1>
+              Experienced <span>mobile and web</span> and website builders
+              measuring.
+            </h1>
+            <p>
+              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+              applications and website builders measuring dozens of completed
+              projects. We build and develop mobile applications for several top
+              platforms, including Android & IOS.
+            </p>
+          </div>
+          <div class="info-buttons">
+            <button>Contact us</button>
+            <button>View more</button>
+          </div>
+        </div>
+
+        <div class="info-right">
+          <img src="./assets/images/Bill Sitting using laptop 1.png" alt="" />
+          <img class="big-plant" src="./assets/images/Big Plant 1.png" alt="" />
+          <img class="cuboid" src="./assets/images/Cuboid 1.png" alt="" />
+          <img
+            class="succlent-angle"
+            src="./assets/images/Succlent angle 1.png"
+            alt=""
+          />
+          <img class="ellipse" src="./assets/images/ellipse.svg" alt="" />
+          <img class="vector1" src="./assets/images/vector1.svg" alt="" />
+          <img class="vector2" src="./assets/images/vector2.svg" alt="" />
+        </div>
+      </div>
+    </main>
 
     <footer>
       <div class="footer-top">
