--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           />
           <img class="ellipse" src="./assets/images/ellipse.svg" alt="" />
           <img class="vector1" src="./assets/images/vector1.svg" alt="" />
-          <img class="vector2" src="./assets/images/vector2.svg" alt="" />
+          <!-- <img class="vector2" src="./assets/images/vector2.svg" alt="" /> -->
         </div>
       </div>
     </main>
