bottom-bar completed

--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
           <!-- <img class="vector2" src="./assets/images/vector2.svg" alt="" /> -->
         </div>
       </div>
+
+      <div class="bottom-bar">
+        <div class="bar-card">
+          <div class="bar-card-img1">
+            <img src="./assets/icons/web-app.svg" alt="" />
+          </div>
+          <div class="bar-card-text">
+            <p>Web Application</p>
+            <p>Lorem Ipsum is simply</p>
+          </div>
+        </div>
+        <div class="bar-card">
+          <div class="bar-card-img2">
+            <img src="./assets/icons/seo.svg" alt="" />
+          </div>
+          <div class="bar-card-text">
+            <p>SEO</p>
+            <p>Lorem Ipsum is simply</p>
+          </div>
+        </div>
+        <div class="bar-card">
+          <div class="bar-card-img3">
+            <img src="./assets/icons/ar-vr.svg" alt="" />
+          </div>
+          <div class="bar-card-text">
+            <p>AR/VR Solutions</p>
+            <p>Lorem Ipsum is simply</p>
+          </div>
+        </div>
+        <div class="bar-card">
+          <div class="bar-card-img4">
+            <img src="./assets/icons/mobile-app.svg" alt="" />
+          </div>
+          <div class="bar-card-text">
+            <p>Mobile Applications</p>
+            <p>Lorem Ipsum is simply</p>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
