home page sections added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,96 @@
           </div>
         </div>
       </div>
+
+      <div class="section1">
+        <div class="section1-title">
+          <h2>Lorem Ipsum is simply dummy text of the printing.</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's
+          </p>
+        </div>
+
+        <div class="lorem-container">
+          <div class="lorem-text">
+            <div class="lorem-title">
+              <div class="happy">
+                <img src="./assets/icons/happy.svg" alt="" />
+              </div>
+              <div>
+                <p>Lorem Ipsum is simply dummy text</p>
+                <p>Lorem Ipsum is simply dummy text</p>
+              </div>
+            </div>
+            <div class="lorem-par">
+              <p>
+                <span>Lorem Ipsum</span> is simply dummy text of the printing.
+              </p>
+              <p>
+                KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and
+                web applications and website builders measuring dozens of
+                completed projects. We build and develop mobile applications for
+                several top platforms, including Android & IOS.
+              </p>
+            </div>
+          </div>
+          <img src="./assets/images/phone.jpg" alt="" />
+          <!-- <img src="./assets/images/ellipse3.svg" alt="" /> -->
+        </div>
+      </div>
+
+      <div class="lorem-container2">
+        <img src="./assets/images/website-mockup-png-10 1.jpg" alt="" />
+        <div class="lorem-text">
+          <div class="lorem-title">
+            <div class="happy2">
+              <img src="./assets/icons/happy.svg" alt="" />
+            </div>
+            <div>
+              <p>Lorem Ipsum is simply dummy text</p>
+              <p>Lorem Ipsum is simply dummy text</p>
+            </div>
+          </div>
+          <div class="lorem-par">
+            <p>
+              <span>Lorem Ipsum</span> is simply dummy text of the printing.
+            </p>
+            <p>
+              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+              applications and website builders measuring dozens of completed
+              projects. We build and develop mobile applications for several top
+              platforms, including Android & IOS.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="lorem-container3">
+        <div class="lorem-text">
+          <div class="lorem-title">
+            <div class="happy3">
+              <img src="./assets/icons/happy.svg" alt="" />
+            </div>
+            <div>
+              <p>Lorem Ipsum is simply dummy text</p>
+              <p>Lorem Ipsum is simply dummy text</p>
+            </div>
+          </div>
+          <div class="lorem-par">
+            <p>
+              <span>Lorem Ipsum</span> is simply dummy text of the printing.
+            </p>
+            <p>
+              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+              applications and website builders measuring dozens of completed
+              projects. We build and develop mobile applications for several top
+              platforms, including Android & IOS.
+            </p>
+          </div>
+        </div>
+        <img src="./assets/images/focus-parallax.PNG" alt="" />
+        <!-- <img src="./assets/images/ellipse3.svg" alt="" /> -->
+      </div>
     </main>
 
     <footer>
