lorem-card & companies sections completed

--- a/index.html
+++ b/index.html
@@ -190,6 +190,39 @@
         <img src="./assets/images/focus-parallax.PNG" alt="" />
         <!-- <img src="./assets/images/ellipse3.svg" alt="" /> -->
       </div>
+
+      <div class="lorem-cards">
+        <div class="lorem-card-l">
+          <p>Lorem Ipsum is simply dummy text.</p>
+          <p class="lorem-card-l-par">
+            KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+            applications and website builders measuring dozens of completed
+            projects. We build and develop mobile applications for several top
+            platforms, including Android & IOS.
+          </p>
+          <button>View More</button>
+        </div>
+
+        <div class="lorem-card-r">
+          <p>Lorem Ipsum is simply dummy text.</p>
+          <p class="lorem-card-r-par">
+            KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+            applications and website builders measuring dozens of completed
+            projects. We build and develop mobile applications for several top
+            platforms, including Android & IOS.
+          </p>
+          <button>View More</button>
+          <img src="./assets/images/Bell Angle 1.png" alt="" />
+        </div>
+      </div>
+
+      <p class="companies-par">You will be in good Company</p>
+      <div class="companies">
+        <img src="./assets/images/beneoshop.png" alt="" />
+        <img src="./assets/images/caspio.png" alt="" />
+        <img src="./assets/images/HyperGrid.png" alt="" />
+        <img src="./assets/images/leotrippi.png" alt="" />
+      </div>
     </main>
 
     <footer>
