home page completed

--- a/index.html
+++ b/index.html
@@ -223,6 +223,16 @@
         <img src="./assets/images/HyperGrid.png" alt="" />
         <img src="./assets/images/leotrippi.png" alt="" />
       </div>
+
+      <div class="email-list">
+        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+        <form action="">
+          <input type="text" value="Enter your email" />
+          <button>SUBSCRIBE</button>
+        </form>
+        <img class="star1" src="./assets/images/Star 1.png" alt="" />
+        <img src="./assets/images/Pai Chart 1.png" alt="" />
+      </div>
     </main>
 
     <footer>
