--- a/assets/html/about-us.html
+++ b/assets/html/about-us.html
@@ -24,7 +24,41 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="about-us">
+        <div class="about-us-top">
+          <div class="about-us-top-l">
+            <img src="../images/Rectangle 16.png" alt="" />
+            <img src="../images/Rectangle 17.png" alt="" />
+          </div>
+          <div class="about-us-top-r">
+            <h1>About us</h1>
+            <div class="about-us-par">
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="about-us-bottom">
+          <img src="../images/Rectangle 18.png" alt="" />
+          <img src="../images/Rectangle 19.png" alt="" />
+        </div>
+      </div>
+
+      <div class="lorem-text">
+        <h2>Lorem Ipsum is simply dummy text of the printing.</h2>
+        <p>
+          KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+          applications and website builders measuring dozens of completed
+          projects. We build and develop mobile applications for several top
+          platforms, including Android & IOS. We build and develop mobile
+          applications for several top platforms, including Android & IOS.
+        </p>
+      </div>
+    </main>
 
     <footer>
       <div class="footer-top">
