about-us page completed

--- a/assets/html/about-us.html
+++ b/assets/html/about-us.html
@@ -58,6 +58,60 @@
           applications for several top platforms, including Android & IOS.
         </p>
       </div>
+
+      <div class="lorem-section">
+        <div class="lorem-section-l">
+          <div class="lorem-section-text">
+            <span class="rectangle"></span>
+            <h3>Lorem Ipsum is simply dummy text of the printing.</h3>
+            <p>
+              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+              applications and website builders measuring dozens of completed
+              projects.
+            </p>
+          </div>
+          <button>Contact us</button>
+        </div>
+
+        <div class="lorem-section-r">
+          <div class="card-l">
+            <div class="lorem-card">
+              <div class="img-box1"><img src="../icons/app.svg" alt="" /></div>
+              Web Application
+            </div>
+            <div class="lorem-card">
+              <div class="img-box3">
+                <img src="../icons/coding.svg" alt="" />
+              </div>
+              Mobile Applications
+            </div>
+          </div>
+          <div class="card-r">
+            <div class="lorem-card">
+              <div class="img-box2">
+                <img src="../icons/startup.svg" alt="" />
+              </div>
+              SEO
+            </div>
+            <div class="lorem-card">
+              <div class="img-box4">
+                <img src="../icons/cloud-computing.svg" alt="" />
+              </div>
+              AR/VR
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="email-list">
+        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+        <form action="">
+          <input type="text" value="Enter your email" />
+          <button>SUBSCRIBE</button>
+        </form>
+        <img class="star1" src="../images/Star 1.png" alt="" />
+        <img src="../images/Pai Chart 1.png" alt="" />
+      </div>
     </main>
 
     <footer>
