contact us page completed

--- a/assets/html/contact-us.html
+++ b/assets/html/contact-us.html
@@ -24,7 +24,80 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="map">
+        <div class="map-top">
+          <div class="map-text">
+            <div class="beverly">
+              <img src="../images/Beverly 1.png" alt="" />
+            </div>
+            <h1>Let’s Collaborate</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing .</p>
+          </div>
+          <img src="../images/map.png" alt="" />
+          <span class="ellipse-lg">
+            <img src="../icons/ellipse-sm.svg" alt="" />
+          </span>
+        </div>
+        <div class="map-bottom">
+          <div class="map-socials">
+            Follow us
+            <div class="f-socials">
+              <div class="socials">
+                <img src="../icons/facebook.svg" alt="" />
+              </div>
+              <div class="socials">
+                <img src="../icons/instagram.svg" alt="" />
+              </div>
+              <div class="socials">
+                <img src="../icons/twitter.svg" alt="" />
+              </div>
+              <div class="socials">
+                <img src="../icons/linkedin.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="tel-box">
+            <div class="tel-num">
+              <img src="../icons/phone.svg" alt="" />
+              +94 4444 5555 6
+            </div>
+          </div>
+          <div class="location">
+            <img src="../icons/gps.svg" alt="" />
+            but also the leap into electronic typesetting
+          </div>
+        </div>
+      </div>
+
+      <div class="say-hello">
+        <div class="say-hello-title">
+          <h2>Say hello</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing .</p>
+        </div>
+        <form class="hello-form" action="">
+          <div class="name">
+            <div class="inputs">
+              <label for="">First Name</label>
+              <input type="text" />
+            </div>
+            <div class="inputs">
+              <label for="">Last Name</label>
+              <input type="text" />
+            </div>
+          </div>
+          <div class="inputs">
+            <label for="">Email Address</label>
+            <input class="input-email" type="text" />
+          </div>
+          <div class="inputs">
+            <label for="">Message</label>
+            <input class="input-message" type="text" />
+          </div>
+          <button>Get in touch</button>
+        </form>
+      </div>
+    </main>
 
     <footer>
       <div class="footer-top">
