--- a/assets/html/services.html
+++ b/assets/html/services.html
@@ -24,7 +24,158 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="our-services">
+        <div class="speaker">
+          <img src="../images/Speaker Angle 1.png" alt="" />
+        </div>
+        <h1>Our Services</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's
+        </p>
+        <img class="succlent" src="../images/Succlent angle 1.png" alt="" />
+      </div>
+
+      <div class="services-card">
+        <div class="card-l">
+          <div class="lorem-card">
+            <div class="img-box3">
+              <img src="../icons/coding.svg" alt="" />
+            </div>
+            <span
+              >Mobile Applications
+              <p>
+                The simplest but robust technology to accompany with you
+              </p></span
+            >
+          </div>
+          <div class="lorem-card">
+            <div class="img-box2">
+              <img src="../icons/startup.svg" alt="" />
+            </div>
+            <span
+              >SEO
+              <p>Let the world find you on top of others</p></span
+            >
+          </div>
+        </div>
+        <div class="card-r">
+          <div class="lorem-card">
+            <div class="img-box1"><img src="../icons/app.svg" alt="" /></div>
+            <span
+              >Web Application
+              <p>
+                Platform independant business solutions for maximum availability
+              </p></span
+            >
+          </div>
+          <div class="lorem-card">
+            <div class="img-box4">
+              <img src="../icons/cloud-computing.svg" alt="" />
+            </div>
+            <span
+              >AR/VR
+              <p>Advanced autonomous technologies to make life simple</p></span
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="lorem-section">
+        <div class="lorem-text">
+          <h2>
+            <span>Lorem Ipsum</span> is simply dummy text of the printing.
+          </h2>
+          <p>
+            KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+            applications and website builders measuring dozens of completed
+            projects. We build and develop mobile applications for several top
+            platforms, including Android & IOS. <br />
+            <br />
+            KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+            applications and website builders measuring dozens <br />
+            <br />
+            <br />
+          </p>
+          <button>Contact us</button>
+        </div>
+        <img
+          class="illustration"
+          src="../images/3D Illustration-Product.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="stat">
+        <div class="stat-card">
+          6
+          <p>Happy Clients</p>
+        </div>
+        <div class="stat-card">
+          11
+          <p>Completed Projects</p>
+        </div>
+        <div class="stat-card">
+          7M
+          <p>Transsactions</p>
+        </div>
+        <div class="stat-card">
+          6000+
+          <p>Customers</p>
+        </div>
+        <img class="bell" src="../images/Bell Angle 1.png" alt="" />
+        <img class="vector1" src="../images/vector.svg" alt="" />
+        <img class="vector2" src="../images/vector.svg" alt="" />
+        <img class="vector3" src="../images/vector.svg" alt="" />
+      </div>
+
+      <div class="lorem-rectangle">
+        <h4>Our latest Projects</h4>
+        <div class="rectangle-cards">
+          <div class="rectangle-card">
+            <img src="../images/Rectangle 20.png" alt="" />
+            <p class="card-par">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="last">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="rectangle-card">
+            <img src="../images/Rectangle 21.png" alt="" />
+            <p class="card-par">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="last">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="rectangle-card">
+            <img src="../images/Rectangle 22.png" alt="" />
+            <p class="card-par">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="last">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="email-list">
+        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+        <form action="">
+          <input type="text" value="Enter your email" />
+          <button>SUBSCRIBE</button>
+        </form>
+        <img class="star1" src="../images/Star 1.png" alt="" />
+        <img src="../images/Pai Chart 1.png" alt="" />
+      </div>
+    </main>
 
     <footer>
       <div class="footer-top">
