--- a/index.html
+++ b/index.html
@@ -1,148 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="./assets/css/global.css" />
-    <link rel="stylesheet" href="./assets/css/index.css" />
-  </head>
-  <body>
-    <header>
-      <a class="logo" href="./index.html">Travolic</a>
 
-      <div class="nav-bar">
-        <div class="pages">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./assets/html/about-us.html">About us</a></li>
-            <li><a href="./assets/html/services.html">Services</a></li>
-          </ul>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+  <link rel="stylesheet" href="./assets/css/global.css" />
+  <link rel="stylesheet" href="./assets/css/index.css" />
+</head>
 
-        <a class="contact-us-btn" href="./assets/html/contact-us.html"
-          >Contact us</a
-        >
-      </div>
-    </header>
+<body>
+  <header>
+    <a class="logo" href="./index.html">Travolic</a>
 
-    <main>
-      <div class="info">
-        <div class="info-left">
-          <div class="info-text">
-            <h1>
-              Experienced <span>mobile and web</span> and website builders
-              measuring.
-            </h1>
-            <p>
-              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
-              applications and website builders measuring dozens of completed
-              projects. We build and develop mobile applications for several top
-              platforms, including Android & IOS.
-            </p>
-          </div>
-          <div class="info-buttons">
-            <button>Contact us</button>
-            <button>View more</button>
-          </div>
-        </div>
-
-        <div class="info-right">
-          <img src="./assets/images/Bill Sitting using laptop 1.png" alt="" />
-          <img class="big-plant" src="./assets/images/Big Plant 1.png" alt="" />
-          <img class="cuboid" src="./assets/images/Cuboid 1.png" alt="" />
-          <img
-            class="succlent-angle"
-            src="./assets/images/Succlent angle 1.png"
-            alt=""
-          />
-          <img class="ellipse" src="./assets/images/ellipse.svg" alt="" />
-          <img class="vector1" src="./assets/images/vector1.svg" alt="" />
-          <!-- <img class="vector2" src="./assets/images/vector2.svg" alt="" /> -->
-        </div>
+    <div class="nav-bar">
+      <div class="pages">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./assets/html/about-us.html">About us</a></li>
+          <li><a href="./assets/html/services.html">Services</a></li>
+        </ul>
       </div>
 
-      <div class="bottom-bar">
-        <div class="bar-card">
-          <div class="bar-card-img1">
-            <img src="./assets/icons/web-app.svg" alt="" />
-          </div>
-          <div class="bar-card-text">
-            <p>Web Application</p>
-            <p>Lorem Ipsum is simply</p>
-          </div>
-        </div>
-        <div class="bar-card">
-          <div class="bar-card-img2">
-            <img src="./assets/icons/seo.svg" alt="" />
-          </div>
-          <div class="bar-card-text">
-            <p>SEO</p>
-            <p>Lorem Ipsum is simply</p>
-          </div>
-        </div>
-        <div class="bar-card">
-          <div class="bar-card-img3">
-            <img src="./assets/icons/ar-vr.svg" alt="" />
-          </div>
-          <div class="bar-card-text">
-            <p>AR/VR Solutions</p>
-            <p>Lorem Ipsum is simply</p>
-          </div>
-        </div>
-        <div class="bar-card">
-          <div class="bar-card-img4">
-            <img src="./assets/icons/mobile-app.svg" alt="" />
-          </div>
-          <div class="bar-card-text">
-            <p>Mobile Applications</p>
-            <p>Lorem Ipsum is simply</p>
-          </div>
-        </div>
-      </div>
+      <a class="contact-us-btn" href="./assets/html/contact-us.html">Contact us</a>
+    </div>
+  </header>
 
-      <div class="section1">
-        <div class="section1-title">
-          <h2>Lorem Ipsum is simply dummy text of the printing.</h2>
+  <main>
+    <div class="info">
+      <div class="info-left">
+        <div class="info-text">
+          <h1>
+            Experienced <span>mobile and web</span> and website builders
+            measuring.
+          </h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's
+            KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+            applications and website builders measuring dozens of completed
+            projects. We build and develop mobile applications for several top
+            platforms, including Android & IOS.
           </p>
         </div>
-
-        <div class="lorem-container">
-          <div class="lorem-text">
-            <div class="lorem-title">
-              <div class="happy">
-                <img src="./assets/icons/happy.svg" alt="" />
-              </div>
-              <div>
-                <p>Lorem Ipsum is simply dummy text</p>
-                <p>Lorem Ipsum is simply dummy text</p>
-              </div>
-            </div>
-            <div class="lorem-par">
-              <p>
-                <span>Lorem Ipsum</span> is simply dummy text of the printing.
-              </p>
-              <p>
-                KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and
-                web applications and website builders measuring dozens of
-                completed projects. We build and develop mobile applications for
-                several top platforms, including Android & IOS.
-              </p>
-            </div>
-          </div>
-          <img src="./assets/images/phone.jpg" alt="" />
-          <!-- <img src="./assets/images/ellipse3.svg" alt="" /> -->
+        <div class="info-buttons">
+          <button>Contact us</button>
+          <button>View more</button>
         </div>
       </div>
 
-      <div class="lorem-container2">
-        <img src="./assets/images/website-mockup-png-10 1.jpg" alt="" />
+      <div class="info-right">
+        <img src="./assets/images/Bill Sitting using laptop 1.png" alt="" />
+        <img class="big-plant" src="./assets/images/Big Plant 1.png" alt="" />
+        <img class="cuboid" src="./assets/images/Cuboid 1.png" alt="" />
+        <img class="succlent-angle" src="./assets/images/Succlent angle 1.png" alt="" />
+        <img class="ellipse" src="./assets/images/ellipse.svg" alt="" />
+        <img class="vector1" src="./assets/images/vector1.svg" alt="" />
+      </div>
+      <img class="ellipse2" src="./assets/images/ellipse2.svg" alt="">
+      <img class="vector2" src="./assets/images/vector2.svg" alt="" />
+    </div>
+
+    <div class="bottom-bar">
+      <div class="bar-card">
+        <div class="bar-card-img1">
+          <img src="./assets/icons/web-app.svg" alt="" />
+        </div>
+        <div class="bar-card-text">
+          <p>Web Application</p>
+          <p>Lorem Ipsum is simply</p>
+        </div>
+      </div>
+      <div class="bar-card">
+        <div class="bar-card-img2">
+          <img src="./assets/icons/seo.svg" alt="" />
+        </div>
+        <div class="bar-card-text">
+          <p>SEO</p>
+          <p>Lorem Ipsum is simply</p>
+        </div>
+      </div>
+      <div class="bar-card">
+        <div class="bar-card-img3">
+          <img src="./assets/icons/ar-vr.svg" alt="" />
+        </div>
+        <div class="bar-card-text">
+          <p>AR/VR Solutions</p>
+          <p>Lorem Ipsum is simply</p>
+        </div>
+      </div>
+      <div class="bar-card">
+        <div class="bar-card-img4">
+          <img src="./assets/icons/mobile-app.svg" alt="" />
+        </div>
+        <div class="bar-card-text">
+          <p>Mobile Applications</p>
+          <p>Lorem Ipsum is simply</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="section1">
+      <div class="section1-title">
+        <h2>Lorem Ipsum is simply dummy text of the printing.</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's
+        </p>
+      </div>
+
+      <div class="lorem-container">
         <div class="lorem-text">
           <div class="lorem-title">
-            <div class="happy2">
+            <div class="happy">
               <img src="./assets/icons/happy.svg" alt="" />
             </div>
             <div>
@@ -155,128 +123,162 @@
               <span>Lorem Ipsum</span> is simply dummy text of the printing.
             </p>
             <p>
-              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
-              applications and website builders measuring dozens of completed
-              projects. We build and develop mobile applications for several top
-              platforms, including Android & IOS.
+              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and
+              web applications and website builders measuring dozens of
+              completed projects. We build and develop mobile applications for
+              several top platforms, including Android & IOS.
             </p>
           </div>
         </div>
+        <img src="./assets/images/phone.jpg" alt="" />
+        <img class="ellipse3" src="./assets/images/ellipse3.svg" alt="" />
       </div>
+    </div>
 
-      <div class="lorem-container3">
-        <div class="lorem-text">
-          <div class="lorem-title">
-            <div class="happy3">
-              <img src="./assets/icons/happy.svg" alt="" />
-            </div>
-            <div>
-              <p>Lorem Ipsum is simply dummy text</p>
-              <p>Lorem Ipsum is simply dummy text</p>
-            </div>
+    <div class="lorem-container2">
+      <img src="./assets/images/website-mockup-png-10 1.png" alt="" />
+      <img class="ellipse4" src="./assets/images/ellipse4.svg" alt="">
+      <div class="lorem-text">
+        <div class="lorem-title">
+          <div class="happy2">
+            <img src="./assets/icons/happy.svg" alt="" />
           </div>
-          <div class="lorem-par">
-            <p>
-              <span>Lorem Ipsum</span> is simply dummy text of the printing.
-            </p>
-            <p>
-              KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
-              applications and website builders measuring dozens of completed
-              projects. We build and develop mobile applications for several top
-              platforms, including Android & IOS.
-            </p>
+          <div>
+            <p>Lorem Ipsum is simply dummy text</p>
+            <p>Lorem Ipsum is simply dummy text</p>
           </div>
         </div>
-        <img src="./assets/images/focus-parallax.PNG" alt="" />
-        <!-- <img src="./assets/images/ellipse3.svg" alt="" /> -->
-      </div>
-
-      <div class="lorem-cards">
-        <div class="lorem-card-l">
-          <p>Lorem Ipsum is simply dummy text.</p>
-          <p class="lorem-card-l-par">
+        <div class="lorem-par">
+          <p>
+            <span>Lorem Ipsum</span> is simply dummy text of the printing.
+          </p>
+          <p>
             KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
             applications and website builders measuring dozens of completed
             projects. We build and develop mobile applications for several top
             platforms, including Android & IOS.
           </p>
-          <button>View More</button>
         </div>
+      </div>
+    </div>
 
-        <div class="lorem-card-r">
-          <p>Lorem Ipsum is simply dummy text.</p>
-          <p class="lorem-card-r-par">
+    <div class="lorem-container3">
+      <div class="lorem-text">
+        <div class="lorem-title">
+          <div class="happy3">
+            <img src="./assets/icons/happy.svg" alt="" />
+          </div>
+          <div>
+            <p>Lorem Ipsum is simply dummy text</p>
+            <p>Lorem Ipsum is simply dummy text</p>
+          </div>
+        </div>
+        <div class="lorem-par">
+          <p>
+            <span>Lorem Ipsum</span> is simply dummy text of the printing.
+          </p>
+          <p>
             KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
             applications and website builders measuring dozens of completed
             projects. We build and develop mobile applications for several top
             platforms, including Android & IOS.
           </p>
-          <button>View More</button>
-          <img src="./assets/images/Bell Angle 1.png" alt="" />
         </div>
       </div>
+      <img src="./assets/images/focus-parallax.PNG" alt="" />
+      <img class="ellipse5" src="./assets/images/ellipse5.svg" alt="" />
+    </div>
 
-      <p class="companies-par">You will be in good Company</p>
-      <div class="companies">
-        <img src="./assets/images/beneoshop.png" alt="" />
-        <img src="./assets/images/caspio.png" alt="" />
-        <img src="./assets/images/HyperGrid.png" alt="" />
-        <img src="./assets/images/leotrippi.png" alt="" />
+    <div class="lorem-cards">
+      <div class="lorem-card-l">
+        <p>Lorem Ipsum is simply dummy text.</p>
+        <p class="lorem-card-l-par">
+          KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+          applications and website builders measuring dozens of completed
+          projects. We build and develop mobile applications for several top
+          platforms, including Android & IOS.
+        </p>
+        <button>View More</button>
       </div>
 
-      <div class="email-list">
-        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-        <form action="">
-          <input type="text" value="Enter your email" />
-          <button>SUBSCRIBE</button>
-        </form>
-        <img class="star1" src="./assets/images/Star 1.png" alt="" />
-        <img src="./assets/images/Pai Chart 1.png" alt="" />
+      <div class="lorem-card-r">
+        <p>Lorem Ipsum is simply dummy text.</p>
+        <p class="lorem-card-r-par">
+          KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web
+          applications and website builders measuring dozens of completed
+          projects. We build and develop mobile applications for several top
+          platforms, including Android & IOS.
+        </p>
+        <button>View More</button>
+        <img src="./assets/images/Bell Angle 1.png" alt="" />
+        <div class="bell-circle"></div>
       </div>
-    </main>
+      <img class="ellipse6" src="./assets/images/ellipse6.svg" alt="">
+    </div>
 
-    <footer>
-      <div class="footer-top">
-        <div class="f-logo">
-          <p>LOGO</p>
+    <p class="companies-par">You will be in good Company</p>
+    <div class="companies">
+      <img src="./assets/images/beneoshop.png" alt="" />
+      <img src="./assets/images/caspio.png" alt="" />
+      <img src="./assets/images/HyperGrid.png" alt="" />
+      <img src="./assets/images/leotrippi.png" alt="" />
+      <img class="ellipse7" src="./assets/images/ellipse7.svg" alt="">
+    </div>
+
+    <div class="email-list">
+      <p>Lorem Ipsum is simply dummy text of the printing.</p>
+      <form action="">
+        <input type="text" value="Enter your email" />
+        <button>SUBSCRIBE</button>
+      </form>
+      <img class="star1" src="./assets/images/Star 1.png" alt="" />
+      <img src="./assets/images/Pai Chart 1.png" alt="" />
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer-top">
+      <div class="f-logo">
+        <p>LOGO</p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+        <p>@Lorem</p>
+      </div>
+      <div class="f-about-us">
+        <p>About us</p>
+        <p>Lorem Portfolio Careers Contact us</p>
+      </div>
+      <div class="f-contact-us">
+        <p>Contact us</p>
+        <div class="f-contact-us-par">
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry.
           </p>
-          <p>@Lorem</p>
-        </div>
-        <div class="f-about-us">
-          <p>About us</p>
-          <p>Lorem Portfolio Careers Contact us</p>
-        </div>
-        <div class="f-contact-us">
-          <p>Contact us</p>
-          <div class="f-contact-us-par">
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
-            <p>+908 89097 890</p>
-          </div>
-        </div>
-        <div class="f-socials">
-          <div class="socials">
-            <img src="./assets/icons/facebook.svg" alt="" />
-          </div>
-          <div class="socials">
-            <img src="./assets/icons/instagram.svg" alt="" />
-          </div>
-          <div class="socials">
-            <img src="./assets/icons/twitter.svg" alt="" />
-          </div>
-          <div class="socials">
-            <img src="./assets/icons/linkedin.svg" alt="" />
-          </div>
+          <p>+908 89097 890</p>
         </div>
       </div>
-      <div class="footer-bottom">
-        Copyright ® 2021 Lorem All rights Recerved
+      <div class="f-socials">
+        <div class="socials">
+          <img src="./assets/icons/facebook.svg" alt="" />
+        </div>
+        <div class="socials">
+          <img src="./assets/icons/instagram.svg" alt="" />
+        </div>
+        <div class="socials">
+          <img src="./assets/icons/twitter.svg" alt="" />
+        </div>
+        <div class="socials">
+          <img src="./assets/icons/linkedin.svg" alt="" />
+        </div>
       </div>
-    </footer>
-  </body>
+    </div>
+    <div class="footer-bottom">
+      Copyright ® 2021 Lorem All rights Recerved
+    </div>
+  </footer>
+</body>
+
 </html>
